--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@
 
 -i https://pypi.org/simple
 asgiref==3.4.1; python_version >= '3.6'
-boto3==1.18.37
-botocore==1.21.37; python_version >= '3.6'
+boto3==1.18.39
+botocore==1.21.39; python_version >= '3.6'
 django-cors-headers==3.8.0
 django-dotenv==1.4.2
 django-seed==0.2.2
@@ -24,6 +24,7 @@ python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 
 pytz==2021.1
 s3transfer==0.5.0; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.4.1; python_version >= '3.5'
+sqlparse==0.4.2; python_version >= '3.5'
 text-unidecode==1.3
 urllib3==1.26.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+whitenoise==5.3.0
